--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,11 @@ env:
     # purposely specifying slowest builds first, to gain time overall
     - LMOD_VERSION=5.8
     - LMOD_VERSION=5.8 TEST_EASYBUILD_MODULE_SYNTAX=Tcl
-    - LMOD_VERSION=6.6.3
-    - LMOD_VERSION=6.6.3 TEST_EASYBUILD_MODULE_SYNTAX=Tcl
-    - LMOD_VERSION=7.4
-    - LMOD_VERSION=7.4 TEST_EASYBUILD_MODULE_SYNTAX=Tcl
-    #- ENV_MOD_VERSION=3.2.10 TEST_EASYBUILD_MODULES_TOOL=EnvironmentModulesC TEST_EASYBUILD_MODULE_SYNTAX=Tcl
+    - LMOD_VERSION=7.7.16
+    - LMOD_VERSION=7.7.16 TEST_EASYBUILD_MODULE_SYNTAX=Tcl
+    - ENV_MOD_VERSION=3.2.10 TEST_EASYBUILD_MODULES_TOOL=EnvironmentModulesC TEST_EASYBUILD_MODULE_SYNTAX=Tcl
     - ENV_MOD_TCL_VERSION=1.147 TEST_EASYBUILD_MODULES_TOOL=EnvironmentModulesTcl TEST_EASYBUILD_MODULE_SYNTAX=Tcl
-    #- ENV_MOD_VERSION=4.0.0 TEST_EASYBUILD_MODULE_SYNTAX=Tcl TEST_EASYBUILD_MODULES_TOOL=EnvironmentModules
+    - ENV_MOD_VERSION=4.1.1 TEST_EASYBUILD_MODULE_SYNTAX=Tcl TEST_EASYBUILD_MODULES_TOOL=EnvironmentModules
 matrix:
   # mark build as finished as soon as job has failed
   fast_finish: true
