include running of 'eb --check-github' in Travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -86,6 +86,8 @@ script:
     # to run tests on an *installed* version of the EasyBuild framework;
     # this is done to catch possible packaging issues
     - cd $HOME
+    # check GitHub configuration
+    - eb --check-github
     # run test suite
     - python -O -m test.framework.suite
     # check bootstrap script version
