--- a/.travis.yml
+++ b/.travis.yml
@@ -16,11 +16,24 @@ matrix:
   # mark build as finished as soon as job has failed
   fast_finish: true
   include:
-    # also test default configuration with Python 2.7 & Python 3.6
+    # also test default configuration with Python 2.7
     - python: 2.7
       env: LMOD_VERSION=6.6.3
+    # also test with Python 3.6
     - python: 3.6
       env: LMOD_VERSION=6.6.3
+    - python: 3.6
+      env: LMOD_VERSION=6.5.1 TEST_EASYBUILD_MODULE_SYNTAX=Tcl
+    - python: 3.6
+      env: LMOD_VERSION=7.8.5
+    - python: 3.6
+      env: LMOD_VERSION=7.8.5 TEST_EASYBUILD_MODULE_SYNTAX=Tcl
+    - python: 3.6
+      env: ENV_MOD_VERSION=3.2.10 TEST_EASYBUILD_MODULES_TOOL=EnvironmentModulesC TEST_EASYBUILD_MODULE_SYNTAX=Tcl
+    - python: 3.6
+      env: ENV_MOD_TCL_VERSION=1.147 TEST_EASYBUILD_MODULES_TOOL=EnvironmentModulesTcl TEST_EASYBUILD_MODULE_SYNTAX=Tcl
+    - python: 3.6
+      env: ENV_MOD_VERSION=4.1.4 TEST_EASYBUILD_MODULE_SYNTAX=Tcl TEST_EASYBUILD_MODULES_TOOL=EnvironmentModules  # Tmod 4.1.4 is used in RHEL8
 addons:
   apt:
     packages:
@@ -113,5 +126,5 @@ script:
     # unset $PYTHONPATH to avoid mixing two EasyBuild 'installations' when testing bootstrapped EasyBuild module
     - unset PYTHONPATH
     # simply sanity check on bootstrapped EasyBuild module (skip when testing with Python 3, for now)
-    - module use /tmp/$TRAVIS_JOB_ID/eb_bootstrap/modules/all
+    - if [ "x$TRAVIS_PYTHON_VERSION" != 'x3.6' ]; then module use /tmp/$TRAVIS_JOB_ID/eb_bootstrap/modules/all; fi
     - if [ "x$TRAVIS_PYTHON_VERSION" != 'x3.6' ]; then module load EasyBuild; eb --version; fi
