enhance Travis config to check for printing messages/warnings in test suite output

--- a/.travis.yml
+++ b/.travis.yml
@@ -99,7 +99,11 @@ script:
     # check GitHub configuration
     - eb --check-github --github-user=easybuild_test
     # run test suite
-    - python -O -m test.framework.suite
+    - python -O -m test.framework.suite 2>&1 | tee test_framework_suite.log
+    # try and make sure output of running tests is clean (no printed messages/warnings)
+    - ignore_patterns = "vsc\.install\.shared_setup|no GitHub token available|skipping SvnRepository test|python2.6/site-packages/urllib3/util/ssl_.py"
+    - prints_count=$(cat test_framework_suite.log | grep -v $ignore_patterns | grep -c '\.\n*[A-Za-z]')
+    - test $prints_count -eq 0 || (echo "Found $prints_count printed messages in output of test suite" && exit 1)
     # check bootstrap script version
     # version and SHA256 checksum are hardcoded below to avoid forgetting to update the version in the script along with contents
     - EB_BOOTSTRAP_VERSION=$(grep '^EB_BOOTSTRAP_VERSION' $TRAVIS_BUILD_DIR/easybuild/scripts/bootstrap_eb.py | sed 's/[^0-9.]//g')
