--- a/.travis.yml
+++ b/.travis.yml
@@ -110,15 +110,15 @@ script:
     # to run tests on an *installed* version of the EasyBuild framework;
     # this is done to catch possible packaging issues
     - cd $HOME
-    # check GitHub configuration (skip when testing with Python 3 for now)
-    - if [ "x$TRAVIS_PYTHON_VERSION" != 'x3.6' ]; then eb --check-github --github-user=easybuild_test; fi
+    # check GitHub configuration
+    - eb --check-github --github-user=easybuild_test
     # run test suite
-    - if [ "x$TRAVIS_PYTHON_VERSION" != 'x3.6' ]; then python -O -m test.framework.suite 2>&1 | tee test_framework_suite.log; else cd $TRAVIS_BUILD_DIR; test/python3_testing.sh; cd -; fi
+    - python -O -m test.framework.suite 2>&1 | tee test_framework_suite.log
     # try and make sure output of running tests is clean (no printed messages/warnings)
     - IGNORE_PATTERNS="vsc\.install\.shared_setup|no GitHub token available|skipping SvnRepository test|lib/python2.6/site-packages|required Lmod as modules tool"
     # '|| true' is needed to avoid that Travis stops the job on non-zero exit of grep (i.e. when there are no matches)
-    - if [ "x$TRAVIS_PYTHON_VERSION" != 'x3.6' ]; then PRINTED_MSG=$(egrep -v "${IGNORE_PATTERNS}" test_framework_suite.log | grep '\.\n*[A-Za-z]' || true); fi
-    - if [ "x$TRAVIS_PYTHON_VERSION" != 'x3.6' ]; then test "x$PRINTED_MSG" = "x" || (echo "Found printed messages in output of test suite\n${PRINTED_MSG}" && exit 1); fi
+    - PRINTED_MSG=$(egrep -v "${IGNORE_PATTERNS}" test_framework_suite.log | grep '\.\n*[A-Za-z]' || true)
+    - test "x$PRINTED_MSG" = "x" || (echo "Found printed messages in output of test suite\n${PRINTED_MSG}" && exit 1)
     # check bootstrap script version
     # version and SHA256 checksum are hardcoded below to avoid forgetting to update the version in the script along with contents
     - EB_BOOTSTRAP_VERSION=$(grep '^EB_BOOTSTRAP_VERSION' $TRAVIS_BUILD_DIR/easybuild/scripts/bootstrap_eb.py | sed 's/[^0-9.]//g')
