also test with Python 3.5

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,9 @@ matrix:
       env: ENV_MOD_TCL_VERSION=1.147 TEST_EASYBUILD_MODULES_TOOL=EnvironmentModulesTcl TEST_EASYBUILD_MODULE_SYNTAX=Tcl
     - python: 3.6
       env: ENV_MOD_VERSION=4.1.4 TEST_EASYBUILD_MODULE_SYNTAX=Tcl TEST_EASYBUILD_MODULES_TOOL=EnvironmentModules  # Tmod 4.1.4 is used in RHEL8
-    # also test most common configuration with Python 3.7
+    # also test most common configuration with Python 3.5 and 3.7
+    - python: 3.5
+      env: LMOD_VERSION=7.8.5
     - python: 3.7
       dist: xenial
       env: LMOD_VERSION=7.8.5
