--- a/.travis.yml
+++ b/.travis.yml
@@ -55,10 +55,8 @@ before_install:
     - if [ "x$TRAVIS_PYTHON_VERSION" == 'x2.6' ]; then pip install 'python-daemon<2.0'; fi
     # autopep8 1.3.4 is last one to support Python 2.6
     - if [ "x$TRAVIS_PYTHON_VERSION" == 'x2.6' ]; then pip install 'autopep8<1.3.5'; else pip install autopep8; fi
-    # have to stick to PyYAML < 5.x for now, due to backwards incompatible changes
-    # also, PyYAML 5.x no longer supports Python 2.6
-    #- if [ "x$TRAVIS_PYTHON_VERSION" == 'x2.6' ]; then pip install 'PyYAML<5.0'; else pip install PyYAML; fi
-    - pip install 'PyYAML<5.0'
+    # PyYAML 5.x no longer supports Python 2.6
+    - if [ "x$TRAVIS_PYTHON_VERSION" == 'x2.6' ]; then pip install 'PyYAML<5.0'; else pip install PyYAML; fi
     # optional Python packages for EasyBuild
     - pip install GC3Pie pycodestyle python-graph-dot python-hglib requests
     # git config is required to make actual git commits (cfr. tests for GitRepository)
