use 'eb --show-system-info' rather than 'eb --version' for basic test for 'eb' command

--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -9,4 +9,4 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: test 'eb' command
-      run: ./eb --version
+      run: ./eb --show-system-info
