ignore errors when collecting coverage report

--- a/.travis.yml
+++ b/.travis.yml
@@ -91,7 +91,8 @@ script:
     - sudo chmod o+w /tmp/file_to_overwrite_for_easybuild_test_copy_file.txt
     # run test suite
     - coverage run -m test.framework.suite
-    - coverage report -m 
+    # ignore errors, since tests inject easyblocks for which there are no source files anymore after the tests have run
+    - coverage report -m --ignore-errors
     # try and make sure output of running tests is clean (no printed messages/warnings)
     - IGNORE_PATTERNS="no GitHub token available|skipping SvnRepository test|lib/python2.6/site-packages|requires Lmod as modules tool"
     # '|| true' is needed to avoid that Travis stops the job on non-zero exit of grep (i.e. when there are no matches)
