replace python-coveralls with coveralls in pip package
Testing Travis  Build due to similar error reported with where it fails to import Reporter https://github.com/z4r/python-coveralls/issues/73

--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ before_install:
     - pip --version
     - pip install --upgrade pip
     - pip --version
-    - pip install python-coveralls
+    - pip install coveralls
     - pip install -r requirements.txt
     # git config is required to make actual git commits (cfr. tests for GitRepository)
     - git config --global user.name "Travis CI"
